<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/packet_negotiation_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_view_margin_start"
    android:layout_marginTop="@dimen/card_view_margin_top"
    android:layout_marginEnd="@dimen/card_view_margin_end"
    android:layout_marginBottom="@dimen/card_view_margin_bottom"
    app:cardCornerRadius="@dimen/card_view_radius"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="@dimen/card_view_content_padding">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <!-- Name Packet -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_name_packet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_name_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_packet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="tests tests testssts tests tests" />
        </LinearLayout>

        <!-- Development -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_type_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="user" />
        </LinearLayout>

        <!-- Task Activation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_task_activation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_heading_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/task_activation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="1232312" />
        </LinearLayout>

        <!-- Level of Change -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_level_of_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_version_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorLevelChange"
                android:textSize="@dimen/text_size"
                tools:text="доработка" />
        </LinearLayout>

        <!-- Subsystem -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_subsystem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_subsystem_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subsystem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="1312312" />
        </LinearLayout>

        <!-- Development -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_development_packet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_development_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/development"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="1312312" />
        </LinearLayout>

        <!-- Status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_status_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="1312312" />
        </LinearLayout>

        <!-- Time Publication -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_time_publication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/title_time_publication_packet_content"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time_publication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                tools:text="1312312" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>